--- a/API/Database/Data_clean.ipynb
+++ b/API/Database/Data_clean.ipynb
@@ -398,7 +398,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -412,7 +412,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "6300804c1ebd8f68b7cf08e26f63890280d7b2ed68bf3ace593b72362e1a2282"
+   }
   }
  },
  "nbformat": 4,
